# haskell-library-collections

./: .editorconfig  .gitignore  .travis.yml  CONTRIBUTING.md  HLint.hs  README.md  sources.txt  stack.yaml
cli-builder/: README.md  cli-builder.cabal
cli-builder/examples/: Simple.hs  cli-builder-examples.cabal
cli-builder/src/System/CLI/: Builder.hs
cli-builder/src/System/CLI/Builder/: Env.hs  Internal.hs  Option.hs  Types.hs
cli-builder/test/: Doctests.hs
cli-builder/test/System/CLI/: BuilderSpec.hs
operate-do/: LICENSE  README.md  operate-do.cabal
operate-do/src/Control/: Operate.hs
operate-do/src/Control/Operate/: Internal.hs  Types.hs
operate-do/src/Language/Haskell/TH/: Extra.hs
operate-do/test/Control/: OperateSpec.hs
